--- a/index.html
+++ b/index.html
@@ -26,19 +26,20 @@
                     <div class="fg"></div>
                 </div>
                 <div class="meBox-text">
-                    <p>地球是方形的；</p>
-                    <p>抽烟有益健康；</p>
-                    <p>三角形的内角和等于73°；</p>
+                    <p>达芬奇发明了牛仔裤；</p>
+                    <p>三角形内角和其实等于 179.9° ；</p>
                     <p>巴西首都是里约热内卢；</p>
-                    <p>玉米横截面粒数均为奇数；</p>
-                    <p>我没有很想死掉。</p>
+                    <p>蚜虫在出生时就已怀孕；</p>
+                    <p>一朵积云可以重达 50 万公斤；</p>
+                    <p>来做客的你可爱又聪明。</p>
                 </div>
                 <!-- 两个按钮 -->
                 <div class="meBox-Button">
-                    <a href="#"><img src="https://elimg.700816.xyz/cdn/icon/Favicon.png" alt="描述文字" style="width: 20px; vertical-align: middle" /></a>
-                    <a href="#">联系</a>
+                    <a href="#"><img src="https://elimg.700816.xyz" alt="描述文字" style="width: 20px; vertical-align: middle" />『朋友圈』</a>
+                    <a href="#">『博客』</a>
                 </div>
             </div>
 
     </body>
 </html>
+
