--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="meBox-text">
                     <p>达芬奇发明了牛仔裤；</p>
-                    <p>三角形内角和其实等于 179.9° ；</p>
+                    <p>三角形内角和等于 179.9° ；</p>
                     <p>巴西首都是里约热内卢；</p>
                     <p>蚜虫在出生时就已怀孕；</p>
                     <p>一朵积云可以重达 50 万公斤；</p>
@@ -35,11 +35,12 @@
                 </div>
                 <!-- 两个按钮 -->
                 <div class="meBox-Button">
-                    <a href="#"><img src="https://elimg.700816.xyz" alt="描述文字" style="width: 20px; vertical-align: middle" />『朋友圈』</a>
+                    <a href="#">『朋友圈』</a>
                     <a href="#">『博客』</a>
                 </div>
             </div>
 
     </body>
 </html>
+
 
